# Motions-as-Queries-Unofficial

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark-reproduction.md  bug_report.md  feature_request.md  implementation-gap.md
configs/: default.yaml  motion_queries_toy.yaml
scripts/: smoke_test.py
src/motions_as_queries_unofficial/: __init__.py  model.py
